// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> component its snapshot matches story Default 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--radio-button-wrapper"
    >
      <input
        class="cds--radio-button"
        id="id"
        name="name"
        type="radio"
        value=""
      />
      <label
        class="cds--radio-button__label"
        for="id"
      >
        <span
          class="cds--radio-button__appearance"
        />
        <span>
          A label
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<RadioButton /> component its snapshot matches story OnFieldPanel 1`] = `
.c3 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  background-color: #f4f4f4;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        A fieldpanel
      </div>
      <div
        class="c3"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id="id"
            name="name"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for="id"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span>
              A label
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioButton /> component its snapshot matches story TestOnForm 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="field"
                name="field"
                type="radio"
                value="123"
              />
              <label
                class="cds--radio-button__label"
                for="field"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  A label
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            ""
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 2rem;"
    >
      <div>
        as standalone field
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="fieldStandalone"
                name="fs"
                type="radio"
                value="123"
              />
              <label
                class="cds--radio-button__label"
                for="fieldStandalone"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  A label
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            ""
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="sData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioButton /> component its snapshot matches story WithHelpText 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #525252;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--radio-button-wrapper"
    >
      <input
        class="cds--radio-button"
        id="id"
        name="name"
        type="radio"
        value=""
      />
      <label
        class="cds--radio-button__label"
        for="id"
      >
        <span
          class="cds--radio-button__appearance"
        />
        <span>
          A label
        </span>
      </label>
    </div>
    <div
      class="c1"
    >
      Some help text
    </div>
  </div>
</div>
`;
